manifests/all.yaml
---
# Source: micro-app/templates/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
  namespace: micro-app
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
---
# Source: micro-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: hammamioumayma/auth:latest
        ports:
        - containerPort: 3001
---
# Source: micro-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: hammamioumayma/client:latest
        ports:
        - containerPort: 4000
---
# Source: micro-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: hammamioumayma/orders:latest
        ports:
        - containerPort: 3003
---
# Source: micro-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: hammamioumayma/payments:latest
        ports:
        - containerPort: 3004
---
# Source: micro-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: hammamioumayma/tickets:latest
        ports:
        - containerPort: 3002
---
# Source: micro-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: hammamioumayma/expiration:latest
        ports:
        - containerPort: 3005
---
# Source: micro-app/templates/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: micro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
# Source: micro-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitlokal.com
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rabbitmq-srv
            port:
              number: 15672
  - host: ticketapp.com
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-srv
            port:
              number: 3001
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-srv
            port:
              number: 4000
      - path: /api/orders/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-srv
            port:
              number: 3003
      - path: /api/payments/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payments-srv
            port:
              number: 3004
      - path: /api/tickets/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-srv
            port:
              number: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: micro-app
spec:
  selector:
    app: auth
  ports:
  - port: 3001
    targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: micro-app
spec:
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tickets
  namespace: micro-app
spec:
  selector:
    app: tickets
  ports:
  - port: 3002
    targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: micro-app
spec:
  selector:
    app: orders
  ports:
  - port: 3003
    targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: payments
  namespace: micro-app
spec:
  selector:
    app: payments
  ports:
  - port: 3004
    targetPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: expiration
  namespace: micro-app
spec:
  selector:
    app: expiration
  ports:
  - port: 3005
    targetPort: 3005
